# perfassess

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_doc.yml  ci.yml  publish_package.yml  publish_pypi_package.yml  python_package.yml
code_documentation/class_performance_assessor/: index.html
code_documentation/main/: index.html
code_documentation/parse_argument/check_argument/: index.html
code_documentation/parse_argument/define_argument/: index.html
code_documentation/parse_argument/parse_argument/: index.html
code_documentation/testor/: index.html
data/: argument.yml  existing_file.txt  memory_assession.html  memory_evaluation.html  time_assession.html  time_evaluation.html
docs/: class_performance_assessor.md  index.md  installation.md  main.md  style.css  testor.md
docs/code_documentation/: class_performance_assessor.md  main.md  testor.md
docs/code_documentation/parse_argument/: check_argument.md  define_argument.md  parse_argument.md
docs/parse_argument/: check_argument.md  define_argument.md  parse_argument.md
docs/plot/: time_evaluation.html
docs/usage/: command_line.md  module.md
env/: README.md  perfassess.yml  performance_assessor.yml  requirements.txt
installation/: index.html
perfassess/: testor.py
plot/: memory_evaluation.html
search/: search_index.json
src/: class_performance_assessor.py  main.py  parse_argument.py  testor.py
src/parse_argument/: check_argument.py  define_argument.py
src/perfassess/: main.py
src/perfassess/parse_argument/: define_argument.py  parse_argument.py
test/: test_check_argument.py  test_main.py
tests/: test_check_argument.py  test_main.py
usage/command_line/: index.html
usage/module/: index.html
