[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfassess"
version = "0.0.1"
description = "Access the performance of a given function and create plot."
authors = [{ name = "Lucas ROUAUD", email = "lucas.rouaud@gmail.com" }]
maintainers = [{ name = "Lucas ROUAUD", email = "lucas.rouaud@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
keywords = ["python", "performance", "assessor", "time", "memory", "plot"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/FilouPlains/perfassess"
Documentation = "https://filouplains.github.io/performance_assessor/"
Repository = "https://github.com/FilouPlains/perfassess"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.19.0"

[tool.poetry.dev-dependencies]
ipython = "^8.22.2"
markdown = "^3.5.2"
mkdocs = "^1.5.3"
mkdocs-autorefs = "^1.0.1"
mkdocs-callouts = "^1.13.2"
mkdocs-material = "^9.5.14"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^0.24.1"
mkdocstrings-python = "^1.9.0"
pylint = "^2.16.2"
pytest = "^7.0"

[project.entry-points."src.main"]
perfassess = "perfassess.main:main"

[project.scripts]
perfassess = "perfassess.main:main"
