[metadata]
name = performance_assessor
version = 0.0.1
author = Lucas ROUAUD
author_email = lucas.rouaud@gmail.com
url = https://github.com/FilouPlains/performance_assessor
description = Access the performance of a given function and create Plotly bar plot. 
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
keywords = performance, assessor, evaluation, time, memory, management
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = False
python_requires= >=3.10
install_requires =
    plotly

[options.package_data]
* = LICENSE.txt

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    buildH = buildh.UI:entry_point
